fix: Increase max-width for logo and footer logo for better visibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -718,7 +718,7 @@ body.loaded {
 }
 
 .tj-header-area .logo-box {
-	max-width: 60px;
+	max-width: 150px;
 	width: 100%;
 	margin-right: 35px;
 }
@@ -2953,7 +2953,7 @@ blockquote cite::before {
 	padding: 50px 0 20px;
 }
 .footer-logo-box {
-	max-width: 75px;
+	max-width: 100px;
 	width: 100%;
 	margin: 0 auto 35px;
 }
